tests/error/postfix.gw
// cant't iterate non-mutable data
1++;
